--- a/package.json
+++ b/package.json
@@ -49,36 +49,36 @@
     "preact": "This is the only package that is build into the final startpage code."
   },
   "devDependencies": {
-    "@types/chai": "4.1.4",
-    "@types/jquery": "3.3.6",
-    "@types/lodash": "^4.14.149",
-    "@types/mocha": "5.2.5",
-    "@types/sinon": "5.0.2",
-    "browser-sync": "^2.26.7",
-    "browserify": "^16.5.0",
+    "@types/chai": "4.2.14",
+    "@types/jquery": "3.5.3",
+    "@types/lodash": "^4.14.162",
+    "@types/mocha": "8.0.3",
+    "@types/sinon": "9.0.8",
+    "browser-sync": "^2.26.13",
+    "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
     "chai": "^4.2.0",
-    "concurrently": "4.0.1",
-    "cookie": "^0.3.1",
+    "concurrently": "^5.3.0",
+    "cookie": "^0.4.1",
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
-    "jquery": "^3.4.1",
-    "karma": "^4.3.0",
-    "karma-browserify": "^5.1.1",
-    "karma-browserstack-launcher": "^1.5.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^2.0.1",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-mocha": "^1.3.0",
+    "jquery": "^3.5.1",
+    "karma": "^5.2.3",
+    "karma-browserify": "^7.0.0",
+    "karma-browserstack-launcher": "^1.6.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-mocha": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
-    "less": "3.8.1",
-    "lodash": "^4.17.15",
-    "mocha": "^5.2.0",
-    "preact": "8.3.1",
+    "less": "3.12.2",
+    "lodash": "^4.17.20",
+    "mocha": "^8.2.0",
+    "preact": "10.5.5",
     "shx": "^0.3.2",
-    "sinon": "5.1.1",
-    "tslint": "5.11.0",
-    "typescript": "3.3.4000",
+    "sinon": "9.2.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.3",
     "watch": "1.0.2",
     "watchify": "^3.11.1"
   },
