--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,22 @@ cache:
   paths:
     - node_modules/
 
+include:
+  - project: acrolinx/integrations/gitlab-ci-templates
+    ref: master
+    file: 'npm/check-licenses-gitlab.yml'
+
+vulnerabilities-check:
+  stage: verify
+  image: node:latest
+  before_script:
+    - npm ci
+  script:
+    - npm audit --production --audit-level=moderate
+  only:
+    - merge_requests
+    - master
+
 sonarcloud-check:
   stage: verify
   image:
